--- a/Mat3am Elhabaib/Views/Reservation/Create.cshtml
+++ b/Mat3am Elhabaib/Views/Reservation/Create.cshtml
@@ -8,7 +8,7 @@
 
     <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
-        <h2>Review Us.. </h2>
+        <h2>Book A Table. </h2>
         @*                 <p>Book a Table</p>
         *@
     </div><!-- End Section Title -->
