--- a/Mat3am Elhabaib/Views/Home/Index.cshtml
+++ b/Mat3am Elhabaib/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
                 <h2 data-aos="fade-up" data-aos-delay="100">Welcome to <span>Mata3m Elhabaib </span></h2>
                 <p data-aos="fade-up" data-aos-delay="200">Bite into Happiness!</p>
                 <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
-                    <a asp-action="Index" asp-controller="Items" class="cta-btn">Our Menu</a>
+                    <a asp-action="Index" asp-controller="Menu" class="cta-btn">Our Menu</a>
                     <a asp-action="Create" asp-controller="Reservation" class="cta-btn">Book a Table</a>
                 </div>
             </div>
