--- a/Mat3am Elhabaib/Views/Items/Create.cshtml
+++ b/Mat3am Elhabaib/Views/Items/Create.cshtml
@@ -24,7 +24,7 @@
             <div class="row gy-4">
                 <div class="col-lg-4 col-md-6">
                     <label asp-for="Name" class="control-label"> Item Name :  </label>
-                    <input type="text" asp-for="Name" class="form-control" placeholder="Category Name..." >
+                    <input type="text" asp-for="Name" class="form-control" placeholder="Item Name..." >
                     <span asp-validation-for="Name" class="text-bg-danger"></span>
                 </div>
                 <div class="col-lg-4 col-md-6">
