--- a/Mat3am Elhabaib/Views/Shared/_Identity.cshtml
+++ b/Mat3am Elhabaib/Views/Shared/_Identity.cshtml
@@ -34,6 +34,9 @@ else
         <a class="nav-link text-white" asp-controller="User" asp-action="Users">
             <i class="bi bi-people"></i> Users
         </a>
+        <a class="nav-link text-white" asp-controller="User" asp-action="AddAdmin">
+            <i class="bi bi-people"></i> Add Admin
+        </a>
     }
 }
 
