--- a/Mat3am Elhabaib/Views/Shared/_Layout.cshtml
+++ b/Mat3am Elhabaib/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -58,7 +59,25 @@
                         <li><a asp-controller="Menu" asp-action="Index">Menu</a></li>
                         <li><a asp-controller="Review" asp-action="Index">Reviews</a></li>
                         <li><a asp-controller="Reservation" asp-action="Index">Reservations</a></li>
-                    
+                        <li>
+                                <a asp-controller="Orders" asp-action="Index">Orders</a>
+                        </li>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
+                        {
+                            <li>
+                                <a asp-controller="Orders" asp-action="ShopingCart">
+                                    <i class="bi bi-cart" style="font-size:20px;"></i>
+                                </a>
+                            </li>
+                        }
+                      
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <li>
+                                <a asp-controller="Category" asp-action="Index">
+Category                                </a>
+                            </li>
+                        }
                     </ul>
 
                     <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
