--- a/Mat3am Elhabaib/Views/Orders/ShopingCart.cshtml
+++ b/Mat3am Elhabaib/Views/Orders/ShopingCart.cshtml
@@ -83,8 +83,8 @@
             </tbody>
         </table>
         <center>
-            <button class="button3  mt-3" onclick="window.location.href='@Url.Action("CompleteOrder", "Orders")'"> Complelte Order </button>
-            <button class="button2  mt-3" onclick="window.location.href='@Url.Action("Index", "Menu")'"> Add Items   </button>
+            <button class="btn btn-success" onclick="window.location.href='@Url.Action("CompleteOrder", "Orders")'"> Complelte Order </button>
+            <button class="btn btn-success" onclick="window.location.href='@Url.Action("Index", "Menu")'"> Add Items   </button>
         </center>
     }
 </div>
