--- a/Mat3am Elhabaib/Views/Reservation/Create.cshtml
+++ b/Mat3am Elhabaib/Views/Reservation/Create.cshtml
@@ -39,7 +39,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <label asp-for="@Model.time" class="control-label"> Time And Date :  </label>
-                    <input asp-for="@Model.time" type="datetime-local" class="form-control" />
+                    <input asp-for="@Model.time" type="datetime-local" class="form-control" min="@DateTime.Now.ToString("yyyy-MM-dd")" value="@Model.time.ToString("yyyy-MM-ddTHH:mm")" />
                     <span asp-validation-for="@Model.time" class="text-bg-danger"></span>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -51,7 +51,7 @@
 
 
             <div class="text-center mt-3">
-                <input class="btn-success" type="submit" value="Create" />
+                <input class="btn btn-success" type="submit" value="Create" />
 
             </div>
         </form><!-- End Reservation Form -->
