--- a/Mat3am Elhabaib/Views/Reservation/Edit.cshtml
+++ b/Mat3am Elhabaib/Views/Reservation/Edit.cshtml
@@ -52,7 +52,7 @@
 
 
             <div class="text-center mt-3">
-                <input class="btn-success" type="submit" value="Edit" />
+                <input class="btn btn-success" type="submit" value="Edit" />
 
             </div>
         </form><!-- End Reservation Form -->
