--- a/Mat3am Elhabaib/Views/Reservation/Index.cshtml
+++ b/Mat3am Elhabaib/Views/Reservation/Index.cshtml
@@ -41,13 +41,13 @@
                         <td>@item.user.PhoneNumber</td>
                         <td>
                               <form asp-action="Edit" method="get" asp-route-id="@item.Id">
-                                <button type="submit" class="btn btn-success" style="border:1px solid white;border-radius:30px;"><i class="bi bi-pencil-square"></i></button>
+                                <button type="submit" class="btn btn-success" ><i class="bi bi-pencil-square"></i></button>
                             </form>
 
                         </td>
                         <td>
                             <form asp-action="Delete" method="post" asp-route-id="@item.Id">
-                                <button type="submit" class="btn btn-danger" style="border:1px solid white;border-radius:30px;"><i class="bi bi-trash"></i></button>
+                                <button type="submit" class="btn btn-danger" ><i class="bi bi-trash"></i></button>
                             </form>
                         </td>
                     </tr>
