--- a/Mat3am Elhabaib/Views/Review/Create.cshtml
+++ b/Mat3am Elhabaib/Views/Review/Create.cshtml
@@ -43,7 +43,7 @@
 
 
             <div class="text-center mt-3">
-                <input class="btn-success" type="submit" value="Create" />
+                <input class="btn btn-success" type="submit" value="Create" />
 
             </div>
         </form><!-- End Reservation Form -->
