--- a/Mat3am Elhabaib/Views/Review/Edit.cshtml
+++ b/Mat3am Elhabaib/Views/Review/Edit.cshtml
@@ -41,7 +41,7 @@
 
 
             <div class="text-center mt-3">
-                <input class="btn-success" type="submit" value="Create" />
+                <input class="btn btn-success" type="submit" value="Edit" />
 
             </div>
         </form><!-- End Reservation Form -->
