--- a/Mat3am Elhabaib/Views/User/EditUserProfile.cshtml
+++ b/Mat3am Elhabaib/Views/User/EditUserProfile.cshtml
@@ -1,18 +1,20 @@
 ﻿@using Mat3am_Elhabaib.DataBase.ModelVM
-@model LoginVM
+@model EditUser
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "EditUserProfile";
 }
 
 
+<!-- Navigation Bar -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 <div class="blurred-background">
     <!-- Register Form -->
     <div class="form-section d-flex justify-content-center align-items-center">
         <div class="col-md-5 p-4 shadow-sm rounded form-container" style="padding-top:0px; margin-bottom:0px">
-            <p class="text-brown text-center create-account-heading" style="font-family: 'Times New Roman', serif; font-size: 30px; color: #EFEEEA;">Login To Your Account <i class="bi bi-box-arrow-right"></i></p>
-            <form asp-action="Login" asp-controller="User" style="border: none; padding-left:15px; padding-right:15px; margin-top:5px; ">
+            <p class="text-brown text-center create-account-heading" style="font-family: 'Times New Roman', serif; font-size: 30px; color: #EFEEEA;         font:bold;
+ "> Edit Your Profile 
+            <form asp-action="EditUserProfile" asp-controller="User" style="border: none; padding-left:15px; padding-right:15px; margin-top:5px; ">
                 <div asp-validation-summary="ModelOnly" class="text-dark-brown"></div>
                 <div class="form-group mb-3">
                     <label asp-for="UserName" class="control-label text-darker-brown">User Name</label>
@@ -20,21 +22,42 @@
                     <span asp-validation-for="UserName" class="text-dark-brown"></span>
                 </div>
                 <div class="form-group mb-3">
-                    <label asp-for="Password" class="control-label text-darker-brown"> Password <i class="bi bi-lock"></i></label>
-                    <input asp-for="Password" class="form-control transparent-input border-dark-brown" type="password" autocomplete="off" />
-                    <span asp-validation-for="Password" class="text-dark-brown"></span>
+                    <label asp-for="OldPasswrd" class="control-label text-darker-brown"> Old Password <i class="bi bi-lock"></i></label>
+                    <input asp-for="OldPasswrd"class="form-control transparent-input border-dark-brown"
+         type="password"
+                           autocomplete="new-password" />                    <span asp-validation-for="OldPasswrd" class="text-dark-brown"></span>
                 </div>
-                <input type="hidden" name="returnUrl" value="@Context.Request.Query["ReturnUrl"]" />
-
-                <div class="form-group form-inline justify-content-between align-items-center mb-4">
-                    <label class="form-check-label text-darker-brown">
-                        <input class="form-check-input" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
-                    </label>
-                    <a class="text-right link2" href="@Url.Action("Register", "User")" class="text-darker-brown">Don't have an account?</a>
+                <div class="form-group mb-3">
+                    <label asp-for="NewPassword" class="control-label text-darker-brown"> New Password <i class="bi bi-lock"></i></label>
+                    <input asp-for="NewPassword" class="form-control transparent-input border-dark-brown" type="password" autocomplete="off" />
+                    <span asp-validation-for="NewPassword" class="text-dark-brown"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="ConfirmPassword" class="control-label text-darker-brown"> Confirm Password <i class="bi bi-lock"></i></label>
+                    <input asp-for="ConfirmPassword" class="form-control transparent-input border-dark-brown" type="password" autocomplete="off" />
+                    <span asp-validation-for="ConfirmPassword" class="text-dark-brown"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="Location" class="control-label text-darker-brown">Location <i class="bi bi-geo-alt-fill"></i></label>
+                    <input asp-for="Location" class="form-control transparent-input border-dark-brown" autocomplete="off" />
+                    <span asp-validation-for="Location" class="text-dark-brown"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="Email" class="control-label text-darker-brown"> Email <i class="bi bi-envelope"></i></label>
+                    <input asp-for="Email" class="form-control transparent-input border-dark-brown" autocomplete="off" />
+                    <span asp-validation-for="Email" class="text-dark-brown"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="PhoneNumber" class="control-label text-darker-brown">Phone Number <i class="bi bi-phone"></i></label>
+                    <input asp-for="PhoneNumber" class="form-control transparent-input border-dark-brown" autocomplete="off" />
+                    <span asp-validation-for="PhoneNumber" class="text-dark-brown"></span>
                 </div>
 
                 <div class="form-group mb-4">
-                    <input class="button1 w-100" type="submit" value="Login" />
+                    <input class="button1 w-100" type="submit" value="Update" />
+                </div>
+                <div class="form-group mb-4">
+                    <a asp-action="Index" asp-controller="Home" class="button1 w-100"> Cancel </a>
                 </div>
             </form>
         </div>
@@ -80,7 +103,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        border-color: aliceblue;
+        border-color:aliceblue;
     }
 
     .button1 {
@@ -104,6 +127,7 @@
     body {
         height: 100%;
         overflow-x: hidden;
+        font:bold;
         margin: 0;
         padding: 0;
         padding-top: 100px;
@@ -125,11 +149,11 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-image: url('https://img.freepik.com/free-photo/blurred-city-lights_23-2148139066.jpg?t=st=1745883421~exp=1745887021~hmac=53c2d30e71bd3dd6821067e95bca63282fc390449b1361a9869b45b2a73f82c6&w=996');
+            background-image: url('https://img.freepik.com/free-photo/restaurant-interior_1127-3394.jpg?t=st=1745881542~exp=1745885142~hmac=65c2e88c971151c393850b5c2f647a2e35977ae847188c77d5b48d8efdefca27&w=996');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            filter: blur(4px);
+            filter: blur(7px);
             z-index: -1;
             opacity: 0.8;
             width: 100vw;
